# fake-ico

./: .gitignore  Cargo.toml  README.md  hardhat.config.ts  package-lock.json  package.json
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/canonical-weth/contracts/WETH9.sol/: WETH9.dbg.json  WETH9.json
artifacts/contracts/ico.sol/: ICO.json
artifacts/contracts/scm.sol/: SCM.dbg.json  SCM.json
artifacts/hardhat/console.sol/: console.dbg.json  console.json
contracts/: ico.sol  scm.sol
deploy/: 00_init.ts
deployments/: ICO.json  IERC20.json  SCM.json  WETH9.json
deployments/rinkeby/: ICO.json  SCM.json  WETH9.json
src/: cli.rs  contracts.rs  erc20.rs  ico.rs  main.rs
test/: ico.ts  scm.ts
