[package]
name = "fake-ico"
version = "0.1.0"
authors = ["Tamika Nomara <tamika.nomara@gnosis.pm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["full"] }
web3 = "0.15.0"
structopt = "0.3.21"
ethcontract = "0.11.3"
uint = "0.9.0"
