[package]
name = "fake-ico"
version = "0.1.0"
authors = ["Tamika Nomara <tamika.nomara@gnosis.pm>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
web3 = "0.16.0"
structopt = "0.3.21"
ethcontract = "0.12.2"
uint = "0.9.0"
